[tool.black]
line-length = 88
include = '\.py?$'
exclude = '(\.git|__pycache__|\.pytest_cache|\.venv)'

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools-scm==10.0.5",
    "wheel==0.46.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "cc-costtrack"
authors = [{ name = "j" }]
description = "Cost tracking hook for ClaudeCode, to run at end of each session"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
]
package = [
    "build==1.4.3"
]
publish = [
    "twine==6.2.0"
]

[project.urls]
Homepage = "https://github.com/jalansari/cc-costtrack"
Issues = "https://github.com/jalansari/cc-costtrack/issues"

[project.scripts]
cc-costtrack = "cc_costtrack:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cc_costtrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
